--- a/check_ee.yml
+++ b/check_ee.yml
@@ -1,12 +1,13 @@
----
-- name: Check Execution Environment packages
-  hosts: localhost
-  gather_facts: false
-  tasks:
-    - name: Show installed Python packages
-      command: pip list
-      register: pip_output
+- name: Show Python version
+  command: python3 --version
+  register: py_ver
 
-    - name: Print pip output
-      debug:
-        var: pip_output.stdout_lines
+- debug:
+    var: py_ver.stdout
+
+- name: Check installed pip packages
+  command: python3 -m pip list
+  register: pip_output
+
+- debug:
+    var: pip_output.stdout_lines
